--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.6.0"
