--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=development node scripts/start.js",
-    "build": "cross-env NODE_ENV=production node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "build": "cross-env node scripts/build.js",
+    "serve": "cross-env NODE_ENV=production serve -s build",
+    "test": "cross-env node scripts/test.js --env=jsdom"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-module-resolver": "^3.1.1",
     "chalk": "1.1.3",
+    "dotenv": "4.0.0",
     "fs-extra": "3.0.1",
     "object-assign": "4.1.1",
     "promise": "8.0.1",
@@ -18,16 +21,14 @@
     "react": "^16.4.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
-    "react-redux": "^5.0.7",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1",
+    "redux-testkit": "^1.0.6",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "resolve": "1.6.0",
-    "semantic-ui-react": "^0.82.3",
-    "socket.io-client": "^2.1.1",
-    "validator": "^10.6.0",
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
@@ -43,7 +44,6 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "cross-env": "^5.2.0",
     "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -109,12 +109,24 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      [
+        "module-resolver",
+        {
+          "root": [
+            "./"
+          ],
+          "alias": {
+            "@": "./src"
+          }
+        }
+      ]
     ]
   },
   "eslintConfig": {
     "parser": "babel-eslint",
     "extends": [
-      "react-app",
       "airbnb-base",
       "plugin:prettier/recommended"
     ],
@@ -140,8 +152,12 @@
       "import/no-unresolved": 0,
       "import/no-cycle": 0,
       "no-plusplus": 0,
+      "no-use-before-define": 0,
       "camelcase": 0,
-      "prefer-destructuring": 0
+      "prefer-destructuring": 0,
+      "allowNamedFunctions": true,
+      "import/no-mutable-exports": 0,
+      "no-unused-expressions": 0
     },
     "settings": {
       "import/resolver": {
